[gd_scene load_steps=4 format=3 uid="uid://b735bt1d7e3w7"]

[ext_resource type="Texture2D" uid="uid://4suuesd63p0k" path="res://ui/pause_menu/bg.png" id="1_31dt0"]
[ext_resource type="Script" path="res://ui/pause_menu/pause_menu.gd" id="1_pc22e"]
[ext_resource type="Texture2D" uid="uid://ddgi6gibnk0xc" path="res://ui/pointer.png" id="3_fjaj7"]

[node name="pause_menu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_pc22e")

[node name="bg" type="Sprite2D" parent="."]
texture = ExtResource("1_31dt0")
centered = false

[node name="locator" type="Sprite2D" parent="."]
position = Vector2(132, 98)
texture = ExtResource("3_fjaj7")

[node name="resume" type="Button" parent="."]
z_index = -1
offset_left = 135.0
offset_top = 134.0
offset_right = 195.0
offset_bottom = 152.0

[node name="return_to_mm" type="Button" parent="."]
z_index = -1
z_as_relative = false
offset_left = 143.0
offset_top = 109.0
offset_right = 203.0
offset_bottom = 131.0

[node name="exit" type="Button" parent="."]
z_index = -1
offset_left = 144.0
offset_top = 133.0
offset_right = 199.0
offset_bottom = 151.0

[connection signal="pressed" from="resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="return_to_mm" to="." method="_on_return_to_mm_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
